# tinydocs

./: .gitignore  .tinydocsignore  .tinyignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: castro.h  index.html  tiny.docs.json  tiny.markers.json
scripts/: autocomplete  install  sourceme
tinydocs/: __init__.py  cli.py  docs.py  generator.py  ignore.py  markers.py  parser.py
tinydocs/templates/: index.html.j2
