[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydocs"
dynamic = ["version"]
authors = [
  { name = "Konstantinos Despoinidis", email = "despoinidisk@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
  "Programming Language :: Python :: 3",
]

dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "tinydocs.__version__" }

[project.scripts]
tinydocs-cli = "tinydocs.cli:main"

