[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydocs"
dynamic = ["version"]
authors = [
    { name = "Konstantinos Despoinidis", email = "despoinidisk@gmail.com" },
]
description = "A tiny documentation generator"
readme = "README.md"
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "Jinja2==3.1.6",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.dynamic]
version = { attr = "tinydocs.__version__" }

[project.scripts]
tinydocs-cli = "tinydocs.cli:main"
